# NLP

./: Curso_ggplot.R  NLP2.ipynb  README.md  [NIAJUS]_[Curso_2]_Bruno_Gondim_Toledo.ipynb  curso_py.ipynb  dados.csv  funcao_nlp.ipynb  funcao_nlp2.ipynb  indicadores_orgao_julgador_ativo_jun2022.csv  nb1.ipynb  niajus_curso2.ipynb  nlp.R  nlp.ipynb  pyproject.toml  t1.py  test.csv  train.csv
.Rproj.user/C41FD070/pcs/: files-pane.pper
.Rproj.user/C41FD070/sources/per/t/: 5453A5BA  CBACD95D  CBACD95D-contents
.Rproj.user/C41FD070/sources/prop/: INDEX
07.05_reclamacoes/: 01_importacao RCL.ipynb  02_exploratory.ipynb  03_etl_base.ipynb  decisoes_rcl_2022_hoje.xlsx  estudo_rcl_abr23.xlsx  estudo_rcl_fev23.xlsx  estudo_rcl_jun23.xlsx  estudo_rcl_mai23.xlsx  reclamacao_fev_jun.gzip
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
